kubernetes/service-json-mock.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-mock-service
spec:
  selector:
    app: json-mock-generator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
