kubernetes/ingress-json-mock.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: json-mock-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: json.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: json-mock-service
                port:
                  number: 8080
